--- a/index.html
+++ b/index.html
@@ -1,34 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="./styles.css">
+  <meta name="description"
+    content="A simple blog preview card designed to showcase a blog post with a clean and modern layout.">
+  <meta name="keywords" content="blog, preview card, HTML, CSS, frontend development, web design">
+  <meta name="author" content="Francisco Baron">
+
   <title>Frontend Mentor | Blog preview card</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
 
-  Learning
-
-  Published 21 Dec 2023
-
-  HTML & CSS foundations
-
-  These languages are the backbone of every website, defining structure, content, and presentation.
-
-  Greg Hooper
+  <div class="card">
+    <img class="card-image" src="./assets/images/illustration-article.svg">
+    <div class="card-content">
+      <div class="card-footer">Learning</div>
+      <div class="date">Published 21 Dec 2023</div>
+      <div class="card-title">HTML & CSS foundations</div>
+      <div class="card-description">These languages are the backbone of every website, defining structure, content, and presentation.</div>  
+    </div>
+    
+    <div class="author">
+      <img class="author-image" src="./assets/images/image-avatar.webp">
+      <div class="author-name">Greg Hooper</div>
+    </div>
+  </div>
   
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://github.com/Kimichin98">Francisco Baron</a>.
   </div>
 </body>
+
 </html>
